@@ -1,3 +1,8 @@
+2011-11-22  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* shr.el (shr-table-horizontal-line): Use "?\s" instead of "? " to
+	avoid later breakage.
+
 2011-11-22  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* gnus-art.el (gnus-article-setup-buffer): Decode group name used for
